--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,27 @@
 steps:
 
   #build and push native image
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'quarkus-build'
+  - id: 'docker-build'
+    name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/realworld-api-quarkus:$COMMIT_SHA', '.' ]
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'crt-1-push'
+
+  - id: 'docker-push'
+    name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'gcr.io/$PROJECT_ID/realworld-api-quarkus:$COMMIT_SHA']
+    waitFor:
+      - "quarkus-build"
+
+  - id: 'cloud-run-deploy'
+    name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'run'
+      - 'deploy'
+      - 'realworld-conduit-backend'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/realworld-api-quarkus:$COMMIT_SHA'
+      - '--region'
+      - 'europe-west1'
+      - '--platform'
+      - 'managed'
     waitFor:
       - "quarkus-build"
